k8/safetybot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safetybot
  labels:
    app: safetybot
  namespace: techops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safetybot
  template:
    metadata:
      labels:
        app: safetybot
    spec:
      containers:
        - name: safetybot
          image: gcr.io/plasma-column-128721/safetybot:latest
          ports:
            - containerPort: 1005
