k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: safetybot
  labels:
    app: safetybot
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 1005
  selector:
    app: safetybot
